<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/space4"
    android:layout_margin="@dimen/space4"
    xmlns:tools="http://schemas.android.com/tools">
<android.support.constraint.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/author"
        style="@style/text_reviews_style"
        android:textSize="@dimen/label_text_size"
        android:textStyle="bold|italic"
        android:layout_marginLeft="@dimen/space8"
        android:layout_marginStart="@dimen/space8"
        android:layout_marginTop="@dimen/space8"
        tools:text="@string/author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/content"
        style="@style/text_reviews_style"
        android:layout_marginBottom="@dimen/space8"
        android:layout_marginEnd="@dimen/space8"
        android:layout_marginLeft="@dimen/space8"
        android:layout_marginRight="@dimen/space8"
        android:layout_marginStart="@dimen/space8"
        android:layout_marginTop="@dimen/space8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author"
        tools:text="@string/content_review" />

    <ImageView
        android:id="@+id/open_web_page"
        style="@style/icons_styles"
        android:layout_marginEnd="@dimen/space8"
        android:layout_marginRight="@dimen/space8"
        app:layout_constraintBottom_toBottomOf="@+id/author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/author"
        android:src="@drawable/ic_grid_world"
        android:contentDescription="@string/open_review_on_web_page_icon_description" />
</android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>