<?xml version="1.0" encoding="utf-8"?><!--

Copyright 2018 tarekmabdallah91@gmail.com

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

 -->
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/space10">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:padding="@dimen/space4">

        <ImageView
            android:id="@+id/iv_item_movie_poster"
            android:layout_width="match_parent"
            android:layout_height="@dimen/poster_item_height"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster_description"
            tools:src="@drawable/ic_video_playing_now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            layout="@layout/rating_icon_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iv_item_movie_poster"
            app:layout_constraintStart_toStartOf="@+id/iv_item_movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/iv_item_movie_poster" />

        <TextView
            android:id="@+id/tv_items_position_in_adapter"
            style="@style/text_views_style"
            android:layout_marginBottom="@dimen/space4"
            android:layout_marginLeft="@dimen/space4"
            android:layout_marginStart="@dimen/space4"
            android:layout_marginTop="@dimen/space4"
            android:textColor="@color/text_color_main_activity"
            android:textSize="@dimen/rating_full_mark_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_item_movie_poster"
            tools:text="@string/rating_full_mark" />

        <ImageView
            android:id="@+id/iv_adult_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space8"
            android:layout_marginEnd="@dimen/space8"
            android:layout_marginRight="@dimen/space8"
            android:contentDescription="@string/adult_icon_description"
            android:src="@drawable/plus_18_movie_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>
